--- a/html/halfway_house_search.html
+++ b/html/halfway_house_search.html
@@ -60,6 +60,7 @@
 
         <div class="searchsection">
             <div class="container">
+                <img src="../images/giphy2.gif" alt="flycat" class="flycat">
                 <form id="content">
                     <input type="text" name="input" class="input">
                     <button type="reset" class="search"></button>
@@ -100,7 +101,7 @@
             <div class="container">
                 <div class="item">
                     <div class="pic">
-                        <img src="../images/halfdetail3.jpg" alt="">
+                        <img src="../images/halfdetail3.jpg" alt="halfway">
                     </div>
                     <div class="text tx1">
                         <h3>野喵中途咖啡</h3>
@@ -112,7 +113,7 @@
                 </div>
                 <div class="item">
                     <div class="pic">
-                        <img src="../images/halfdetail2.jpg" alt="">
+                        <img src="../images/halfdetail2.jpg" alt="halfway">
                     </div>
                     <div class="text tx2">
                         <h3>野喵中途咖啡</h3>
@@ -124,7 +125,7 @@
                 </div>
                 <div class="item">
                     <div class="pic">
-                        <img src="../images/halfdetail3.jpg" alt="">
+                        <img src="../images/halfdetail3.jpg" alt="halfway">
                     </div>
                     <div class="text tx3">
                         <h3>野喵中途咖啡</h3>
