--- a/html/halfway_house_search.html
+++ b/html/halfway_house_search.html
@@ -105,9 +105,10 @@
                     </div>
                     <div class="text tx1">
                         <h3>野喵中途咖啡</h3>
-                        <br> ADD：新北市三重區集英路65號
-                        <br> TEL：02-2857-8282
-                        <br> TIME：12:00～21:00（周一公休）
+                        <p>ADD：新北市三重區集英路65號</p>
+                        <p>TEL：02-2857-8282</p>
+                        <p>TIME：12:00～21:00（周一公休）</p>
+                        <a href="#">see more</a>
                     </div>
                     <div class="bg bg1"></div>
                 </div>
@@ -117,9 +118,10 @@
                     </div>
                     <div class="text tx2">
                         <h3>野喵中途咖啡</h3>
-                        <br> ADD：新北市三重區集英路65號
-                        <br> TEL：02-2857-8282
-                        <br> TIME：12:00～21:00（周一公休）
+                        <p>ADD：新北市三重區集英路65號</p>
+                        <p>TEL：02-2857-8282</p>
+                        <p>TIME：12:00～21:00（周一公休）</p>
+                        <a href="#">see more</a>
                     </div>
                     <div class="bg bg2"></div>
                 </div>
@@ -129,9 +131,10 @@
                     </div>
                     <div class="text tx3">
                         <h3>野喵中途咖啡</h3>
-                        <br> ADD：新北市三重區集英路65號
-                        <br> TEL：02-2857-8282
-                        <br> TIME：12:00～21:00（周一公休）
+                        <p>ADD：新北市三重區集英路65號</p>
+                        <p>TEL：02-2857-8282</p>
+                        <p>TIME：12:00～21:00（周一公休）</p>
+                        <a href="#">see more</a>
                     </div>
                     <div class="bg bg3"></div>
                 </div>
