--- a/html/halfway_house_detail.html
+++ b/html/halfway_house_detail.html
@@ -66,16 +66,17 @@
             </div>
             <div class="rating">
                 <div class="star">
-                    <i class="fa fa-star-o" aria-hidden="true"></i>
-                    <i class="fa fa-star-o" aria-hidden="true"></i>
-                    <i class="fa fa-star-o" aria-hidden="true"></i>
-                    <i class="fa fa-star-o" aria-hidden="true"></i>
-                    <i class="fa fa-star-o" aria-hidden="true"></i>
+                    <i class="fa fa-star-o 1" aria-hidden="true"></i>
+                    <i class="fa fa-star-o 2" aria-hidden="true"></i>
+                    <i class="fa fa-star-o 3" aria-hidden="true"></i>
+                    <i class="fa fa-star-o 4" aria-hidden="true"></i>
+                    <i class="fa fa-star-o 5" aria-hidden="true"></i>
                 </div>
                 <div class="text">
                     <span>4.6</span>顆星
                 </div>
             </div>
+            <script src="../js/halfway/star.js"></script>
         </div>
 
         <div class="smallintro">
