--- a/html/index.html
+++ b/html/index.html
@@ -162,13 +162,15 @@
                             </a>
                         </div>
                     </li>
-
                 </ul>
+                <div class="more">
+                    <a href="#" class="btn-more">More</a>
+                </div>
             </div>
         </div>
         <div class="section">
             <!-- 中途之家 -->
-        <div class="half">
+            <div class="half">
                 <div class="half-title">
                     <h2>中途之家</h2>
                     <h3>Animal Shelter</h3>
@@ -212,11 +214,14 @@
                         <span class="half-time">營業時間 : 10:00~20:00</span>
                     </div>
                 </div>
+                <div class="more">
+                        <a href="#" class="btn-more">More</a>
+                </div>
             </div>
         </div>
         <div class="section">
             <!-- 商城 -->
-        <div class="shop">
+            <div class="shop">
                 <div class="container">
                     <div class="shop-left">
                         <img src="../images/storeProduct_1.jpg" alt="product">
@@ -259,48 +264,54 @@
                 </div>
             </div>
         </div>
-        </div>
-    <!-- footer -->
-    <footer>
-        <div class="container">
-            <!-- <nav>
-                    <ul>
-                        <li>
-                            <a href="#">尋喵</a>
-                        </li>
-                        <li>
-                            <a href="##1">中途之家</a>
-                        </li>
-                        <li>
-                            <a href="#">商城</a>
-                        </li>
-                        <li>
-                            <a href="#">討論區</a>
-                        </li>
-                        <li>
-                            <a href="#">會員專區</a>
-                        </li>
-                    </ul>
-                </nav> -->
-            <div class="follow">
-                <div class="btns">
-                    <span>follow us on</span>
-                    <a href="#" class="btn facebook">
-                        <i class="fa fa-facebook"></i>
-                    </a>
-                    <a href="#" class="btn youtube">
-                        <i class="fa fa-youtube"></i>
-                    </a>
-                    <a href="#" class="btn twitter">
-                        <i class="fa fa-twitter"></i>
-                    </a>
-                    <a href="#" class="btn google">
-                        <i class="fa fa-google"></i>
-                    </a>
-                </div>
+        <div class="section">
+            <!-- 快速註冊 -->
+            <div class="quick-signUp">
+
             </div>
+            <!-- footer -->
+            <footer>
+                <div class="container">
+                    <!-- <nav>
+                        <ul>
+                            <li>
+                                <a href="#">尋喵</a>
+                            </li>
+                            <li>
+                                <a href="##1">中途之家</a>
+                            </li>
+                            <li>
+                                <a href="#">商城</a>
+                            </li>
+                            <li>
+                                <a href="#">討論區</a>
+                            </li>
+                            <li>
+                                <a href="#">會員專區</a>
+                            </li>
+                        </ul>
+                    </nav> -->
+                    <div class="follow">
+                        <div class="btns">
+                            <span>follow us on</span>
+                            <a href="#" class="btn facebook">
+                                <i class="fa fa-facebook"></i>
+                            </a>
+                            <a href="#" class="btn youtube">
+                                <i class="fa fa-youtube"></i>
+                            </a>
+                            <a href="#" class="btn twitter">
+                                <i class="fa fa-twitter"></i>
+                            </a>
+                            <a href="#" class="btn google">
+                                <i class="fa fa-google"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </footer>
         </div>
-    </footer>
+    </div>
     <script>
         window.addEventListener('load', function () {
             $('#fullpages').fullpage({
